# goit-cs-hw-06

./: Dockerfile.main  Dockerfile.ws  docker-compose.yml  pyproject.toml
src/: main.py  socket_server.py
src/db/: __init__.py  documents.py
